--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
     <!-- add to homescreen for ios -->
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+    <script async defer
+            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCesj8e1d-7-ABV983lP3pxo_RkotruL0M">
+    </script>
 </head>
 
 <body>
